# litmusai

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  Makefile  README.md  action.yml  cleanup_issues.sh  pyproject.toml  test_report.html
.github/workflows/: ci.yml  copilot-review.yml  publish.yml
blog/: devto_post.md
docs/: adapters.md
examples/: 01_basic_eval.py  02_model_comparison.py  03_safety_scan.py  04_multi_run.py  05_json_validation.py  e2e_test.py  quickstart.py
src/litmusai/: __init__.py  globals.py
src/litmusai/adapters/: __init__.py
src/litmusai/assertions/: __init__.py
src/litmusai/benchmarks/: __init__.py
src/litmusai/ci/: __init__.py
src/litmusai/cli/: __init__.py  main.py
src/litmusai/config/: __init__.py
src/litmusai/conversation/: __init__.py
src/litmusai/core/: __init__.py  agent.py  reporter.py  runner.py  scorer.py  suite.py
src/litmusai/dashboard/: __init__.py
src/litmusai/exports/: __init__.py
src/litmusai/ground_truth/: __init__.py
src/litmusai/memory_poison/: __init__.py
src/litmusai/pipeline/: __init__.py
src/litmusai/profiles/: __init__.py
src/litmusai/reports/: __init__.py
src/litmusai/results/: __init__.py
src/litmusai/retry/: __init__.py
src/litmusai/safety/: __init__.py
src/litmusai/scorers/: __init__.py
src/litmusai/scoring/: __init__.py
src/litmusai/suites/: __init__.py
src/litmusai/suites/coding/: __init__.py  suite.yaml
src/litmusai/suites/customer_support/: __init__.py  suite.yaml
src/litmusai/suites/instruction_following/: __init__.py  suite.yaml
src/litmusai/suites/planning/: __init__.py  suite.yaml
src/litmusai/suites/research/: __init__.py  suite.yaml
src/litmusai/suites/safety/: __init__.py  suite.yaml
src/litmusai/suites/summarization/: __init__.py  suite.yaml
src/litmusai/suites/tool_use/: __init__.py  suite.yaml
src/litmusai/tracing/: __init__.py
tests/: test_agent.py  test_assertions.py  test_benchmarks.py  test_ci.py  test_cli.py  test_config.py  test_conversation.py  test_dimensions.py  test_global_config.py  test_ground_truth.py  test_integration.py  test_llm_judge.py  test_memory_poison.py  test_model_params.py  test_multi_run.py  test_pipeline.py  test_pipeline_class.py  test_profiles.py  test_reports.py  test_results.py  test_retry_tracing_plugins.py  test_safety.py  test_scorer.py  test_suite.py  test_suites.py  test_yaml_and_exports.py
