[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "litmusai"
version = "0.1.0"
description = "The open-source evaluation framework for AI agents"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Kunal Tanti", email = "kutanti@github.com" },
]
keywords = ["ai", "agents", "evaluation", "benchmark", "testing", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Testing",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "click>=8.0",
    "rich>=13.0",
    "pydantic>=2.0",
    "httpx>=0.25",
    "pyyaml>=6.0",
    "jinja2>=3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pytest-httpx>=0.30",
    "ruff>=0.1",
    "mypy>=1.0",
    "types-PyYAML>=6.0",
    "pre-commit>=3.0",
]
langchain = ["langchain>=0.1"]
openai = ["openai>=1.0"]
anthropic = ["anthropic>=0.20"]

[project.scripts]
litmus = "litmusai.cli.main:cli"

[project.urls]
Homepage = "https://github.com/kutanti/litmusai"
Documentation = "https://github.com/kutanti/litmusai/tree/main/docs"
Repository = "https://github.com/kutanti/litmusai"
Issues = "https://github.com/kutanti/litmusai/issues"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.10"
strict = true
