[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "litmuseval"
version = "0.2.1"
description = "The open-source evaluation framework for AI agents — test, compare, ship with confidence"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Kunal Tanti", email = "kutanti@github.com" },
]
keywords = [
    "ai", "agents", "evaluation", "benchmark", "testing",
    "llm", "safety", "assertions", "scoring", "openai",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Testing",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]
dependencies = [
    "click>=8.0",
    "rich>=13.0",
    "pydantic>=2.0",
    "httpx>=0.25",
    "pyyaml>=6.0",
    "jinja2>=3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pytest-httpx>=0.30",
    "ruff>=0.1",
    "mypy>=1.0",
    "types-PyYAML>=6.0",
    "pre-commit>=3.0",
]
openai = ["openai>=1.0"]
langchain = ["langchain>=0.1"]
anthropic = ["anthropic>=0.20"]
litellm = ["litellm>=1.0"]
all = [
    "openai>=1.0",
    "langchain>=0.1",
    "anthropic>=0.20",
    "litellm>=1.0",
    "jsonschema>=4.0",
]

[project.scripts]
litmus = "litmusai.cli.main:cli"

[project.urls]
Homepage = "https://github.com/kutanti/litmusai"
Documentation = "https://github.com/kutanti/litmusai#-quickstart"
Repository = "https://github.com/kutanti/litmusai"
Issues = "https://github.com/kutanti/litmusai/issues"
Changelog = "https://github.com/kutanti/litmusai/releases"

[tool.hatch.build.targets.sdist]
include = ["src/litmusai/"]

[tool.hatch.build.targets.wheel]
packages = ["src/litmusai"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.10"
strict = true
